<resources>
    <string name="app_name">Usecured</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="new_user">New user?</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="next">Next</string>
    <string name="emergency_line">Emergency line</string>
    <string name="contact_one">Contact One</string>
    <string name="contact_two">Contact Two</string>
    <string name="contact_three">Contact Three</string>
    <string name="done">Done</string>
    <string name="contacts">Contacts</string>
    <string name="submit">Submit</string>
    <string name="forgot">Forgot</string>
    <string name="sanusi">Sanusi</string>
    <string name="hi">Hi,</string>
    <string name="address">Address</string>
    <string name="first_name_required">First name is required</string>
    <string name="full_name_required">Full name is required</string>
    <string name="last_name_required">Last name is required</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_required">Password is required</string>
    <string name="old_password_required">Old password is required</string>
    <string name="minimum_password_characters_required">Minimum of 8 characters is required for new password</string>
    <string name="new_password_required">New password is required</string>
    <string name="confirm_password_not_match">Passwords do not match</string>
    <string name="phone_required">Phone number is required</string>
    <string name="name">Name</string>
    <string name="ok">OK</string>
    <string name="yea">Yea!</string>
    <string name="phone_number">Phone number</string>
    <string name="change">Change</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="slider_title_one">Accident Help!</string>
    <string name="slider_content_one">Usecured helps you to request for emergency in a situation you are involved in an accident. It notifies your emergency contact list by just clicking the emergency button.</string>
    <string name="slider_content_two">Fire service assistance can be requested using the application. You are just a click of a button away.</string>
    <string name="slider_content_three">Whenever you are being abused at home or anywhere. You can use Usecured to request for help from emergency contacts list. You are just a click of a button away.</string>
    <string name="slider_title_three">Domestic Abuse</string>
    <string name="slider_title_two">Need of fire service</string>
    <string name="error">Error!</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="log_out">Log out</string>
    <string name="user_s_details">User\'s details</string>
    <string name="profile_page">Profile Page</string>
    <string name="back">Back</string>
    <string name="preference_settings">Preference Settings</string>
    <string name="changes_are_made_to_the_app_here_on_this_page">Changes are made to the app here on this page.</string>
    <string name="change_password">Change Password</string>
    <string name="in_need_to_change_password">In need to change password</string>
    <string name="sms_charges">Sms charges</string>
    <string name="get_to_know_the_app">Get to know the app</string>
    <string name="about_page">About Page</string>
</resources>
