<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".features.login.LoginPage">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/loginHeaderTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:text="@string/sign_in"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearContainerOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="vertical"
                android:padding="@dimen/_15sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginSubHeaderTv">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_edit_text"
                    android:drawablePadding="@dimen/_15sdp"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="15dp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:paddingBottom="15dp"
                    android:textColor="@color/appBlack"
                    android:textColorHint="@color/inActiveStroke"
                    android:textSize="@dimen/_14ssp" />


                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:background="@drawable/border_edit_text"
                    android:drawablePadding="@dimen/_15sdp"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_15sdp"
                    android:textColor="@color/appBlack"
                    android:textColorHint="@color/inActiveStroke"
                    android:textSize="@dimen/_14ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/forgotPasswordTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

            <Button
                android:id="@+id/signInBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/sign_in"
                android:layout_marginBottom="@dimen/_20sdp"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_16ssp"
                android:background="@drawable/btn_back_ground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearContainerOne" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/loginSubHeaderTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:text="@string/welcome_back"
                android:textStyle="bold"
                android:textSize="@dimen/_25ssp"
                app:layout_constraintStart_toStartOf="@+id/loginHeaderTv"
                app:layout_constraintTop_toBottomOf="@+id/loginHeaderTv" />


            <LinearLayout
                android:id="@+id/linerContainerTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:gravity="center"
                android:layout_marginBottom="@dimen/_15sdp"
                >
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user"
                    android:textSize="@dimen/_14ssp"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/registerTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_14ssp"
                    />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>