<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:overScrollMode="never"
    android:scrollbars="vertical"
    android:scrollbarSize="@dimen/_2sdp"
    android:scrollbarThumbVertical="@color/appRed"
    android:paddingEnd="@dimen/_3sdp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.registration.RegistrationPageOne"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/registerHeaderTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:text="@string/new_user"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backBtn" />

        <LinearLayout
            android:id="@+id/linearContainerOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerSubHeaderTv">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/firstNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_edit_text"
                android:drawablePadding="@dimen/_15sdp"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:textColor="@color/appBlack"
                android:textColorHint="@color/inActiveStroke"
                android:textSize="@dimen/_14ssp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/lastNameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/border_edit_text"
                android:drawablePadding="@dimen/_15sdp"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:textColor="@color/appBlack"
                android:textColorHint="@color/inActiveStroke"
                android:textSize="@dimen/_14ssp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/border_edit_text"
                android:drawablePadding="@dimen/_15sdp"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:textColor="@color/appBlack"
                android:textColorHint="@color/inActiveStroke"
                android:textSize="@dimen/_14ssp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/phoneNumberEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/border_edit_text"
                android:drawablePadding="@dimen/_15sdp"
                android:hint="@string/phone_number"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:textColor="@color/appBlack"
                android:textColorHint="@color/inActiveStroke"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:background="@drawable/btn_back_ground"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearContainerOne"
            app:layout_goneMarginBottom="@dimen/_25sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/registerSubHeaderTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:text="@string/register"
            android:textStyle="bold"
            android:textSize="@dimen/_25ssp"
            app:layout_constraintStart_toStartOf="@+id/registerHeaderTv"
            app:layout_constraintTop_toBottomOf="@+id/registerHeaderTv" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backBtn"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            app:srcCompat="@drawable/ic_navigation_red_24dp"
            android:rotation="270"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>