<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.changepassword.ChangePasswordPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/changePasswordHeaderTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_70sdp"
            android:text="@string/change"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearContainerOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordSubHeaderTv">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:padding="@dimen/_5sdp"
                android:background="@drawable/border_edit_text"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/oldPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:hint="@string/old_password"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    android:textColor="@color/appBlack"
                    android:textColorHint="@color/inActiveStroke"
                    android:textSize="@dimen/_14ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                app:passwordToggleEnabled="true"
                android:paddingBottom="@dimen/_8sdp"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/newPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_edit_text"
                    android:drawablePadding="@dimen/_15sdp"
                    android:hint="@string/new_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_15sdp"
                    android:textColor="@color/appBlack"
                    android:textColorHint="@color/inActiveStroke"
                    android:textSize="@dimen/_14ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_8sdp"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/confirmPasswordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_edit_text"
                    android:drawablePadding="@dimen/_15sdp"
                    android:hint="@string/confirm_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_15sdp"
                    android:paddingEnd="@dimen/_15sdp"
                    android:paddingBottom="@dimen/_15sdp"
                    android:textColor="@color/appBlack"
                    android:textColorHint="@color/inActiveStroke"
                    android:textSize="@dimen/_14ssp" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/btn_back_ground"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearContainerOne" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgotPasswordSubHeaderTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:text="@string/password"
            android:textStyle="bold"
            android:textSize="@dimen/_25ssp"
            app:layout_constraintStart_toStartOf="@+id/changePasswordHeaderTv"
            app:layout_constraintTop_toBottomOf="@+id/changePasswordHeaderTv" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backBtn"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            app:srcCompat="@drawable/ic_navigation_red_24dp"
            android:rotation="270"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>